# Focusguard

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  SETUP.md
src/focusguard/: __init__.py  __main__.py  config.py  main.py
src/focusguard/commands/: __init__.py  coach.py  daemon.py  github_cmd.py  goal.py  privacy.py  report.py  start.py  stats.py  stop.py
src/focusguard/core/: __init__.py  pattern_engine.py  retention.py  scorer.py  tracker.py
src/focusguard/db/: __init__.py  connection.py  models.py  queries.py
src/focusguard/integrations/: __init__.py  git_tracker.py  github_api.py  llm.py
src/focusguard/personality/: __init__.py  modes.py  prompts.py
src/focusguard/platform/: __init__.py  daemon_linux.py  daemon_macos.py  daemon_windows.py  window.py
src/focusguard/security/: __init__.py  blocklist.py  crypto.py  keyring_store.py
src/focusguard/ui/: __init__.py  dashboard.py  report_view.py  themes.py
tests/: __init__.py  conftest.py  test_blocklist.py  test_db.py  test_pattern_engine.py  test_personality.py  test_scorer.py  test_tracker.py
