[project]
name = "focusguard"
version = "0.1.0"
description = "Privacy-first developer productivity tracker"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dhruv Sharma" }]
keywords = ["productivity", "focus", "tracker", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "psutil>=5.9",
    "pywinctl>=0.3",
    "keyring>=25.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
encrypted = ["sqlcipher3-binary>=0.5"]
ai = ["openai>=1.0", "ollama>=0.3"]
github = ["gitpython>=3.1", "PyGithub>=2.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]
all = ["focusguard[encrypted,ai,github,dev]"]

[project.scripts]
focusguard = "focusguard.main:app"

[project.urls]
Homepage = "https://github.com/Dhruv-Sharma29/Focusguard"
Repository = "https://github.com/Dhruv-Sharma29/Focusguard"
Issues = "https://github.com/Dhruv-Sharma29/Focusguard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/focusguard"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["focusguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
